add lombok and tweak config